<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoApp</string>
    <string name="action_settings">Settings</string>
    <string name="add_hint">Add a new item</string>
    <string name="add_button_label">Add</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="edit_item_Label">Edit Item Below:</string>
    <string name="save_button_label">Save</string>
    <string name="reminder_title_label">Title</string>
    <string name="reminder_dueDateTitle_label">Due:</string>
    <string name="reminder_dueDateValue_label">Due Date</string>
    <string name="date_label_hint">Date</string>
    <string name="date_button_label">Date</string>
    <string name="edit_item_hint">Edit Item</string>
    <string name="due_date_hint">Due Date</string>
    <string name="title_label">Title</string>

</resources>
