<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codePath.todo.EditItemActivity" >

    <TextView
        android:id="@+id/tvEditItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/edit_item_Label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etNewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNewTimeItem"
        android:layout_below="@+id/etNewTimeItem"
        android:ems="10"
        android:hint="@string/title_label"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etNewItem"
        android:layout_alignBottom="@+id/etNewItem"
        android:layout_toRightOf="@+id/etNewItem"
        android:onClick="saveItem"
        android:text="@string/save_button_label" />

    <EditText
        android:id="@+id/etNewTimeItem"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEditItemLabel"
        android:layout_below="@+id/tvEditItemLabel"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/due_date_hint"
        android:longClickable="false"
        android:onClick="onDateItem"
        android:paddingTop="10dp" >

        <requestFocus />
    </EditText>

</RelativeLayout>