<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
     >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:text="@string/reminder_title_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvDueDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:paddingLeft="15dp"
        android:text="@string/reminder_dueDateTitle_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvDueDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDueDateTitle"
        android:layout_alignBottom="@+id/tvDueDateTitle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/reminder_dueDateValue_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
